
2013-10-28 Max Baak <mbaak@cern.ch>
	M       src/HypoTestTool.cxx
	* Initial fit of hypotest done with Minuit2
	M 	src/Utils.cxx
	* Fix to function that resets nominal global measurements for mc stat errors.
	M       setup.sh
	* Migration to slc 6


2013-10-10 David Cote <david.cote@cern.ch>
	-major clean-up of SysTable.py
	  * removed un-used method 2 with its arguments
	  * moved namemap from core to an optional end-user config file
	    with an exmaple in python/MySystTableConfig.py
	    --> usable as: SysTable.py <options> MySystTableConfig.py
	-added new the possibility to merge samples, with syntax:
	    --> SysTable.py -s '[topZ,topW,ttbarHiggs,singleTopZ],[diBosonWZ,diBosonPowhegZZ,triBoson],fakes'
	    --> YieldsTable.py -s '[topZ,topW,ttbarHiggs,singleTopZ],[diBosonWZ,diBosonPowhegZZ,triBoson],fakes'
	-added the possibility to merge systematics after fit, using namemap object, with syntax:
	    --> SysTable.py <options> MySystTableConfig.py
	-added -t argument to YieldsTable.py to set the latex table name
	-added -u argument to YieldsTable.py to pass arbitrary string to latex table caption
	* Tagging HistFitter-00-00-31

2013-10-08 Max Baakk <mbaak@cern.ch>
	M       scripts/UpperLimitTable.py
	* Reset initial parameter values before p0 calculation
	M       Utils.cxx
	M       Utils.h
	* Function to reset nominal global measurements

2013-08-29 Lucian Ancu <lucian@cern.ch>
	M python/configManager.py
	* added infrastructure for adding systematics both from a list [S1,S2,S3] or a list of lists  [[S11,S12],[S21,S22,S23],...]. Summed systematic takes the first name in the list, i.e. S1, S11 or S21. 
	
2013-08-23 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M macros/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C
	A macros/contourplot/contourmacros/limit_plot_SM.py
	* minor changes in SUSY_m0_vs_m12_all_withBand_cls.C
	* added new contour plot plotting macro in python: limit_plot_SM.py
